# magma-dikes-2d-flow

./: .gitignore  CMakeLists.txt  README.md  TODO.md  analytical_solution.nb  build.sh  check_variable_viscsity.ipynb  compare.py  fedora-config.sh  fedora-debug.sh  incompressible_flow_in_channel.py  incompressible_flow_in_channel_ice.py  input copy.json  input.json  mac-config.sh  mac-debug.sh  plot_incompressible_flow.py  plot_surf_onesimid.py  plot_velocity.py  release.sh  requirements.txt  vft_viscosity.nb
cmake/: fetchHighFive.cmake
data/pinatubo/: dissolved_04.json  dissolved_06.json  dissolved_10.json  h2o_co2_gas_density.json
data/roper_lister/: roper_lister_K1.csv  roper_lister_K8.csv
inputs/: base copy.py  base.py  explicit.py  explicit_base.py  implicit.py  implicit_base.py  implicit_high_km.py  implicit_test.py  input.json  input.py  input2.py  input_const_viscosity.json  input_lister.json  input_repeat.json  lister_verification.py
inputs/artcile2024/1d/: input.py
inputs/artcile2024/cryst_tau/: input.py
inputs/artcile2024/roper_lister/: inputK1.py
inputs/artcile2024/temperature/: input.py
mathematica/: gas_properties.nb  navier-stokes-dimless.nb
py_scripts/: DikeData.py  baseplot_1d.py  debug_flux.py  error_parser.ipynb  fv_loglog.py  input.py  input_utils.py  magma_state_plot.py  plot2d.py  plot_2d_vertical.py  plot_2d_wshape.py  plot_2dsurf.py  plot_2dsurf_T.py  plot_2dsurf_all.py  plot_2dsurf_beta.py  plot_2dsurf_ux.py  plot_compare_1d.py  plot_compare_sims.py  plot_compare_sims_T.py  plot_compare_sims_mu.py  roper_lister.py  test.ipynb  timeplots.py  utils.py
py_scripts/article2024/: 2d_all.py  2d_sims.py  2d_vertical.py  front_width.py  fv_loglog.py  fv_loglog_1dvs2d.py  fv_loglog_1dvs2d_twopump.py  fv_loglog_E.py  fv_loglog_KIc.py  fv_loglog_Th.py  fv_loglog_eq.py  fv_loglog_kinetic_law.py  fv_loglog_meshver.py  fv_loglog_noshearheat.py  fv_loglog_supp_tauc.py  fv_loglog_tau.py  fv_loglog_wt.py  maxwidth_1dvs2d.py  maxwidth_2d_tau.py  plot_dissolved.py  plot_tauc.py  roper_lister_K1.py  roper_lister_K8.py  width.py  width_1dvs2d.py  width_1dvs2d_twopump.py  width_KIc.py  width_meshver.py  width_supp_tauc.py
py_scripts/inputs/: base.py
py_scripts/inputs/artcile2024/: base_case.py  cases.txt  create_all_inputs.py  create_inputs.py  eq_cryst.py  h2o.py  sim100.py  sim101.py  sim102.py  sim103.py  sim104.py  sim105.py  sim106.py  sim107.py  sim108.py  sim110.py  sim111.py  sim112.py  sim113.py  sim115.py  sim116.py  sim117.py  sim118.py  sim119.py  sim120.py  sim121.py  sim130.py  sim131.py  sim140.py  sim141.py  sim142.py  sim153.py  sim154.py  sim155.py  sim156.py  sim157.py  sim160.py  sim161.py  sim162.py  sim170.py  (+2 more)
py_scripts/inputs/artcile2024/cryst_tau/: input.py
py_scripts/inputs/artcile2024/roper_lister/: inputK0.py  inputK16.py  inputK8.py
py_scripts/inputs/artcile2024/toughness/: inputK500.py
py_scripts/inputs/artcile2024/wth2o/: input copy.py
py_scripts/inputs/artcile2024/young/: input.py
py_scripts/plots/: front_width.py  fv_loglog.py  plot2d_logscale.py
py_scripts/prototype_plots/: fv_loglog.py  width.py
py_scripts/tests/: h20_pinatubo_vs_yan_2015.py  h2o_solub_yan_lavallee_2015.py  vesical_test.py
pysrc/: __init__.py  dike_data.py  input_generator.py  pyproject.toml
src/: CMakeLists.txt  ChannelFlow.cpp  CohesiveModel.cpp  DikeData.cpp  DikeData.hpp  DikeModel2d.cpp  Elasticity.cpp  Elasticity.hpp  InputData.cpp  InputData.hpp  MagmaState.cpp  MassBalance.cpp  MassBalance.hpp  Mesh.cpp  Mesh.hpp  ReservoirData.cpp  Schedule.cpp  Schedule.hpp  TimestepController.cpp  Utils.cpp  Writers.cpp  main.cpp
src/core/: fixed_channel.py  mesh.py
src/include/: ChannelFlow.hpp  CohesiveModel.hpp  DikeData.hpp  DikeModel2d.hpp  Elasticity.hpp  InputData.hpp  MagmaState.hpp  MassBalance.hpp  Mesh.hpp  ReservoirData.hpp  Schedule.hpp  TimestepController.hpp  Utils.hpp  Writers.hpp
src/utils/: CMakeLists.txt  Degasation.hpp  Interp.hpp  JustTimer.hpp  LinearSolver.cpp  LinearSolver.hpp  PinatubaCrystallization.hpp  ViscosityModels.cpp  ViscosityModels.hpp  base_magma_state.py  uniform_interp.cpp  uniform_interp.hpp
srcpython/core/: mesh.py
srcpython/test_ns/: fixed_channel.py
srcpython/utils/: adaptive_timestep.py
tests/: CMakeLists.txt  check_water_saturation.cpp  test1.cpp  test2.cpp  test3.cpp
