# add_executable(check_water_saturation check_water_saturation.cpp)
# target_link_libraries(check_water_saturation PRIVATE nlohmann_json::nlohmann_json spdlog::spdlog utils)
add_executable(test1 test1.cpp)
target_link_libraries(test1 PRIVATE nlohmann_json::nlohmann_json spdlog::spdlog utils)
target_include_directories(test1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS test1 DESTINATION bin)